hphp/hack/test/typecheck/new_inference/async_lambda.php.exp
File "async_lambda.php", line 6, characters 11-25:
Typing error (Typing[4323])
File "collections/Set.hhi", line 223, characters 29-36:
Some type constraint(s) are violated here
File "collections/Set.hhi", line 223, characters 23-24:
Tu is a constrained type parameter
File "collections/Set.hhi", line 223, characters 29-36:
Expected arraykey
File "async_lambda.php", line 6, characters 11-25:
But got Awaitable<[unresolved]> (result of 'async function')
File "async_lambda.php", line 6, characters 11-25:
Invalid argument (Typing[4323])
File "collections/Set.hhi", line 223, characters 29-36:
Some type constraint(s) are violated here
File "collections/Set.hhi", line 223, characters 23-24:
Tu is a constrained type parameter
File "collections/Set.hhi", line 223, characters 29-36:
Expected arraykey
File "async_lambda.php", line 6, characters 11-25:
But got Awaitable<int> (result of 'async function')
